--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 # VITE_BASE_URL=https://nvl2rk2s-4000.inc1.devtunnels.ms/v1/
-# VITE_BASE_URL=https://nvl2rk2s-4000.inc1.devtunnels.ms/
-VITE_BASE_URL=http://localhost:4000/
+VITE_BASE_URL=https://nvl2rk2s-4000.inc1.devtunnels.ms/
+# VITE_BASE_URL=http://localhost:4000/
+# VITE_BASE_URL=https://49wrs8sv-3001.inc1.devtunnels.ms/
