--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@mui/icons-material": "^7.3.5",
     "@mui/material": "^7.3.5",
     "@mui/x-data-grid": "^8.20.0",
+    "@mui/x-date-pickers": "^8.22.0",
     "axios": "^1.13.2",
+    "date-fns": "^4.1.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.66.1",
+    "react-icons": "^5.5.0",
     "react-image-crop": "^11.0.10",
     "react-router-dom": "^7.9.6",
     "yup": "^1.7.1"
