firmware check added

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-# VITE_HANDPASS_BASE_URL=https://nvl2rk2s-4000.inc1.devtunnels.ms/
-VITE_HANDPASS_BASE_URL=http://localhost:4000/
+VITE_HANDPASS_BASE_URL=https://nvl2rk2s-4000.inc1.devtunnels.ms/
+# VITE_HANDPASS_BASE_URL=http://localhost:4000/
